--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,152 @@
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+attrs==23.1.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.0.0
 blinker==1.6.2
+CacheControl==0.12.11
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
 click==8.1.3
+comm==0.1.3
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.6
+distro==1.7.0
+distro-info===1.1build1
+executing==1.2.0
+fastjsonschema==2.16.3
+filelock==3.11.0
+firebase-admin==6.1.0
 Flask==2.3.2
+Flask-Cors==3.0.10
+fqdn==1.5.1
+google-api-core==2.11.0
+google-api-python-client==2.86.0
+google-auth==2.18.1
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.11.1
+google-cloud-storage==2.9.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.0
+grpcio==1.54.2
+grpcio-status==1.54.2
+gunicorn==20.1.0
+httplib2==0.20.2
+idna==3.4
+importlib-metadata==4.6.4
+ipykernel==6.23.0
+ipython==8.13.2
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
+isoduration==20.11.0
 itsdangerous==2.1.2
+jedi==0.18.2
+jeepney==0.7.1
 Jinja2==3.1.2
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+jupyter_server==2.5.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.7
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+mistune==2.0.5
+more-itertools==8.10.0
+msgpack==1.0.5
+nbclassic==1.0.0
+nbclient==0.7.4
+nbconvert==7.4.0
+nbformat==5.8.0
+nest-asyncio==1.5.6
+netifaces==0.11.0
+notebook==6.5.4
+notebook_shim==0.2.3
+numpy==1.24.3
+oauthlib==3.2.0
+packaging==23.1
+pandas==2.0.1
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+pipenv==2023.3.20
+platformdirs==3.2.0
+progressbar==2.5
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+proto-plus==1.22.2
+protobuf==4.23.1
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+Pygments==2.15.1
+PyGObject==3.42.1
+PyJWT==2.7.0
+pyparsing==2.4.7
+pyrsistent==0.19.3
+python-apt==2.3.0+ubuntu2.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3
+PyYAML==5.4.1
+pyzmq==25.0.2
+qtconsole==5.4.3
+QtPy==2.3.1
+requests==2.30.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rsa==4.9
+SecretStorage==3.3.1
+Send2Trash==1.8.2
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4.1
+stack-data==0.6.2
+systemd-python==234
+terminado==0.17.1
+tinycss2==1.2.1
+tornado==6.3.1
+traitlets==5.9.0
+tzdata==2023.3
+ubuntu-advantage-tools==27.12
+ufw==0.36.1
+unattended-upgrades==0.1
+uri-template==1.2.0
+uritemplate==4.1.1
+urllib3==1.26.15
+virtualenv==20.21.0
+virtualenv-clone==0.5.7
+wadllib==1.3.6
+wcwidth==0.2.6
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.5.1
 Werkzeug==2.3.4
+widgetsnbextension==4.0.7
+zipp==1.0.0
